--- a/css/styles.css
+++ b/css/styles.css
@@ -8,8 +8,8 @@ body {
 }
 
 .game-screen {
-  width: 90%;
-  height: 95%;
+  width: 1700px;
+  height: 800px;
   margin-top: 20px;
   display: flex;
   justify-content: center;
@@ -34,7 +34,7 @@ button {
   grid-template-rows: repeat(3, 1fr);
   align-items: center;
   width: 45%;
-  height: 80%;
+  height: 650px;
   grid-gap: 1px;
   margin-right: 5px;
 
@@ -42,8 +42,8 @@ button {
 }
 
 .leaderboard {
-  width: 15%;
-  height: 80%;
+  width: 250px;
+  height: 450px;
 }
 
 .row {
@@ -56,13 +56,40 @@ button {
 }
 
 .card {
-  background-color: cadetblue;
-  width: 90%;
-  height: 90%;
+  opacity: 100;
+  width: 150px;
+  height: 200px;
   margin: 10px;
+  border-radius: 15px;
+  cursor: pointer;
+  background-color: teal;
 }
 
-.card img {
+img {
   width: 100%;
   height: 100%;
+  border-radius: 15px;
+  border: 1px solid;
+  visibility: hidden;
+}
+
+.hide {
+  opacity: 0;
+}
+
+.show {
+  visibility: visible;
+  transition: 2s ease-in-out;
+}
+
+.disabled {
+  pointer-events: none;
+  opacity: 0.9;
+}
+
+.test {
+  /* background-image: url("../img/1.png"); */
+
+  width: 150;
+  height: 300px;
 }
