--- a/css/styles.css
+++ b/css/styles.css
@@ -1,49 +1,114 @@
 @import "reset.css";
-
-html,
-body {
-  height: 100%;
-  width: 100%;
-  margin: 0;
+html {
+  background-color: #766ce0;
 }
 
-.game-screen {
-  width: 1700px;
-  height: 800px;
-  margin-top: 20px;
+.main-screen {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  height: 80%;
+  width: 60%;
+  margin: 0;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin: 50px auto 10px auto;
+  background-color: white;
+  border-radius: 20px;
+}
+
+h1 {
+  position: absolute;
+  top: 0;
+  left: 35%;
+  display: inline;
+  background-color: #ffd946;
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+  font-weight: 900;
+  padding: 5px 20px;
+  border-radius: 20px;
 }
 
 header {
-  width: 15%;
-  height: 90%;
+  width: 38%;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
 }
 button {
+  width: 20%;
   font-size: 25px;
 }
 
-.header__container {
-  margin-top: 50px;
-  font-size: 30px;
+#jsFormContainer span {
+  font-size: 1.5rem;
+  font-weight: 500;
+  font-style: italic;
+}
+
+.header__score {
+  font-size: 1.5rem;
+  left: 0;
+  margin: 10px 0;
+}
+
+.game-screen {
+  width: 100%;
+  height: 100%;
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .game-board {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  align-items: center;
-  width: 45%;
+  width: 70%;
   height: 650px;
-  grid-gap: 1px;
-  margin-right: 5px;
 
-  border-right: 2px solid black;
+  margin: auto;
 }
 
 .leaderboard {
-  width: 250px;
-  height: 450px;
+  width: 22%;
+  padding-left: 10px;
+  border-left: 2px solid black;
+}
+
+h2 {
+  font-size: 1.5rem;
+  margin-bottom: 15px;
+  font-weight: 600;
+}
+
+.leaderboard__header {
+  display: flex;
+  font-weight: 500;
+  font-size: 1.2rem;
+  margin-bottom: 15px;
+}
+.leaderboard__header span:first-child {
+  width: 40%;
+}
+.leaderboard__header span:last-child {
+  width: 60%;
+}
+
+#jsRank li {
+  display: flex;
+  margin-bottom: 5px;
+}
+.player__name {
+  width: 40%;
+  font-size: 1.2rem;
+  font-weight: 600;
+  font-style: italic;
+}
+.player__score {
+  width: 60%;
+  font-weight: 500;
 }
 
 .row {
@@ -57,12 +122,19 @@ button {
 
 .card {
   opacity: 100;
-  width: 150px;
+  width: 60%;
+  height: 90%;
+  margin: auto;
+  /* width: 150px;
   height: 200px;
-  margin: 10px;
+   */
   border-radius: 15px;
   cursor: pointer;
-  background-color: teal;
+  background-image: url(/img/ninizBG.jpg);
+  background-size: cover;
+
+  /* background-position: -4.9rem -13rem; */
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.7);
 }
 
 img {
