--- a/css/styles.css
+++ b/css/styles.css
@@ -12,14 +12,14 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 50px auto 10px auto;
+  margin: 80px auto 10px auto;
   background-color: white;
   border-radius: 20px;
 }
 
 h1 {
   position: absolute;
-  top: 0;
+  top: 2%;
   left: 35%;
   display: inline;
   background-color: #ffd946;
@@ -31,20 +31,37 @@ h1 {
 }
 
 header {
-  width: 38%;
+  width: 95%;
   display: flex;
   flex-direction: column;
   align-items: left;
+  margin: 10px 10px;
 }
 button {
-  width: 20%;
+  width: 10%;
   font-size: 25px;
+  background-color: #ffd946;
+  border: none;
+  border-radius: 20px;
+  transition-duration: 0.5s;
+  cursor: pointer;
+}
+
+button:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  font-size: 27px;
+  width: 9%;
 }
 
 #jsFormContainer span {
   font-size: 1.5rem;
   font-weight: 500;
   font-style: italic;
+}
+
+#jsInputName {
+  font-size: 1.1rem;
+  width: 17%;
 }
 
 .header__score {
@@ -164,4 +181,23 @@ img {
 
   width: 150;
   height: 300px;
+}
+
+#onlyFullscreen {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  font-size: 2rem;
+  display: flex;
+  background-color: #766ce0;
+  z-index: 100;
+  align-items: center;
+  justify-content: center;
+}
+
+@media screen and (min-width: 1400px) {
+  #onlyFullscreen {
+    display: none;
+  }
 }
