--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,9 @@ html {
   margin: 80px auto 10px auto;
   background-color: white;
   border-radius: 20px;
+
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
 
 h1 {
